# GenAI-workspace

./: 02_python_internals.md  03_control_flow.md  05_functions.md  05_sets_dictionaries_and_functions.md  06_fxn_and_oops.md  Tooling_Task_gradio.ipynb  api.md  file_handling.md  oops.md  venv.md
01_python_core/: 01_intro_to_AI.md
Gen AI Core/: pyproject.toml
Gen AI Core/01_api_basics/: laguna-m.1.py  using_native_sdk.py  using_openAI.py
Gen AI Core/02_web_scraping/: html_parsing_demo.py  html_tags_and_attributes.txt  user_agent.py
Gen AI Core/03_text_processing/: fixed_size_chunking.py
Gen AI Core/Python Core/: 04_strings_lists_and_tuples.md  try_except.md
Gen AI Core/python_core/: README.md
gen_ai_core/: .gitignore  README.md  config.py
gen_ai_core/01_api_basics/: google-gemma-4-31b.py  ollama_chat.py  openai-gpt-oss-120b.py  reasoning_continuation.py  using_openRouter.py  using_requests.py
gen_ai_core/02_web_scraping/: clean_webpage.py
gen_ai_core/04_projects/: webpage_summarizer.py  webpage_summarizer_ollama.py
notebooks/: 01_tokenization.ipynb
notebooks/Music Recommendation System/: README.md  music_recommendation_v1.ipynb  music_recommendation_v2.ipynb  songs_dataset.json
