[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "google>=3.0.0",
    "google-genai>=2.8.0",
    "html5lib>=1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
